5.0a2 -> 5.0a3:
    - jbj: eliminate rpm peculier int typedefs, use stdint types instead.
    - jbj: convert all remaining uses of int_XY to stdint types.
    - jbj: revert HEADER_XARALLOCATED gloopiness.
    - jbj: functional (and leak free) -Kvv of both *.rpm and *.xar.
    - jbj: revert xar handling to rpmio model, buffer handling in rpmxar.
    - jbj: fix: add RPMRC_FAIL where needed using -Kvv.
    - jbj: functional (and leak free) queries of both *.rpm and *.xar.
    - jbj: transparently recognize XAR magic when reading.
    - jbj: eliminate rpmpkgClean, rpmxar memory free on Fclose instead.
    - jbj: use refcounted rpmxar attached to FD_t to handle xar state.
    - jbj: switch to using rpmxar instead of rpmwf most everywhere.
    - jbj: stub in rpmio/rpmxar.c xar payload extraction.
    - jbj: create rpmWriteHeader with error msg returns.
    - jbj: use rpmReadHeader with error msg returns.
    - jbj: eliminate HDRread/HDRwrite vectors.
    - jbj: revert "rebase rpmParseState_e +256", more than rebasing needs doing.
    - jbj: convert+remove headerRead() from the API, use rpmpkgRead instead.
    - jbj: rebase rpmParseState_e +256 to permit rpmRC to be returned too.
    - jbj: remove headerWrite() from the public API, use rpmpkgWrite instead.
    - jbj: convert last headerWrite to use rpmpkgWrite instead.
    - jbj: conver 2 (of 9 remaining) headerRead's to use rpmpkgRead instead.
    - jbj: add newlines to error message spew from pkgio.
    - jbj: fix: read from the input, not the output, fd.
    - jbj: bury rpmReadHeader underneath rpmpkgRead("Header", ...).
    - jbj: use the fd attached pgpDig everywhere necessary.
    - jbj: attach pgpDig to the fd being used to verify signatures.
    - jbj: splint fiddles for refcounted storage.
    - jbj: add refcounts to rpmwf and pgpDig, they're gonna be snarly.
    - jbj: eliminate the headerCheck recursion check. not seen w rpm code paths.
    - jbj: pass dig, not ts, through pkgio.c header routines.