@@ -1757,9 +1757,9 @@ static /*@null@*/ void * headerFreeTag(/*@unused@*/ Header h,
  */
 static
 int headerGetExtension(Header h, uint32_t tag,
-			/*@null@*/ /*@out@*/ hTYP_t type,
+			/*@null@*/ /*@out@*/ rpmTagType * type,
 			/*@null@*/ /*@out@*/ hRET_t * p,
-			/*@null@*/ /*@out@*/ hCNT_t c)
+			/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@globals headerCompoundFormats @*/
 	/*@modifies *type, *p, *c @*/
 	/*@requires maxSet(type) >= 0 /\ maxSet(p) >= 0 /\ maxSet(c) >= 0 @*/
@@ -1862,9 +1862,9 @@ exit:
  */
 static
 int headerGetEntry(Header h, uint32_t tag,
-			/*@null@*/ /*@out@*/ hTYP_t type,
+			/*@null@*/ /*@out@*/ rpmTagType * type,
 			/*@null@*/ /*@out@*/ hRET_t * p,
-			/*@null@*/ /*@out@*/ hCNT_t c)
+			/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@modifies *type, *p, *c @*/
 	/*@requires maxSet(type) >= 0 /\ maxSet(p) >= 0 /\ maxSet(c) >= 0 @*/
 {
@@ -2427,9 +2427,9 @@ HeaderIterator headerInitIterator(Header h)
 static
 int headerNextIterator(HeaderIterator hi,
 		/*@null@*/ /*@out@*/ hTAG_t tag,
-		/*@null@*/ /*@out@*/ hTYP_t type,
+		/*@null@*/ /*@out@*/ rpmTagType * type,
 		/*@null@*/ /*@out@*/ hRET_t * p,
-		/*@null@*/ /*@out@*/ hCNT_t c)
+		/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@modifies hi, *tag, *type, *p, *c @*/
 	/*@requires maxSet(tag) >= 0 /\ maxSet(type) >= 0
 		/\ maxSet(p) >= 0 /\ maxSet(c) >= 0 @*/
@@ -3925,7 +3925,7 @@ void headerCopyTags(Header headerFrom, Header headerTo, hTAG_t tagstocopy)
 	rpmTagCount c;
 	if (headerIsEntry(headerTo, *tagno))
 	    continue;
-	if (!headerGetEntry(headerFrom, *tagno, (hTYP_t)&t, &p, &c))
+	if (!headerGetEntry(headerFrom, *tagno, &t, &p, &c))
 	    continue;
 	(void) headerAddEntry(headerTo, *tagno, t, p.ptr, c);
 	p.ptr = headerFreeData(p.ptr, t);
